# manta-rs

./: .editorconfig  .gitignore  .gitmodules  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FILE_TEMPLATE  README.md  dummy_register.csv  fake_text_file.txt  index.html  registry.csv  test_results
forks/cocoon/: Cargo.toml  LICENSE  README.md
forks/cocoon/src/: error.rs  format.rs  header.rs  kdf.rs  lib.rs  mini.rs
manta/: Cargo.toml  README.md
manta-accounting/: Cargo.toml  README.md
manta-accounting/src/: account.rs  address.rs  asset.rs  fs.rs  identity.rs  identity2.rs  key.rs  key2.rs  keys.rs  ledger.rs  lib.rs  transfer.rs  transfer2.rs  wallet.rs
manta-accounting/src/fs/: mod.rs  serde.rs
manta-accounting/src/transfer/: batch.rs  canonical.rs  mod.rs  receiver.rs  sender.rs  test.rs  unverified_transfers.rs
manta-accounting/src/wallet/: balance.rs  ledger.rs  mod.rs  signer.rs  state.rs  stateless_signer.rs  test.rs
manta-accounting/src/wallet2/: ledger.rs  mod.rs  signer.rs  state.rs
manta-benchmark/: Cargo.toml  README.md  wasm-bench.sh  wasm-snap.sh
manta-benchmark/benches/: bench_mint.rs  bench_private_transfer.rs  bench_reclaim.rs  benchmark.rs  crypto.rs  ec.rs  ecc.rs  mint.rs  private_transfer.rs  reclaim.rs  to_private.rs  to_public.rs
manta-benchmark/src/: benchmark.rs  ec.rs  ecc.rs  glv.rs  lib.rs  parameters.rs  payment.rs  transfer.rs  trusted_setup.rs  wasm_browser_bench.rs
manta-benchmark/src/benchmark/: glv.rs  mod.rs
manta-benchmark/tests/: crypto.rs  web.rs
manta-benchmark/www/: index.html  index.js  package.json
manta-cli/: Cargo.toml  README.md
manta-cli/src/: lib.rs  main.rs
manta-cli/src/command/: mod.rs
manta-codec/: Cargo.toml  README.md
manta-codec/src/: lib.rs
manta-crypto/: Cargo.toml  README.md
manta-crypto/src/: accumulator.rs  algebra.rs  checksum.rs  commitment.rs  concat.rs  constraint.rs  constraints.rs  ecc.rs  encryption.rs  hash.rs  ies.rs  key.rs  lib.rs  mac.rs  merkle_tree.rs  old_key.rs  password.rs  permutation.rs  prf.rs  rand.rs  set.rs  signature.rs  util.rs
manta-crypto/src/algebra/: diffie_hellman.rs  mod.rs
manta-crypto/src/arkworks/: algebra.rs  codec.rs  constraint.rs  ec.rs  ff.rs  glv.rs  groth16.rs  mod.rs  pairing.rs  rand.rs  ratio.rs  serialize.rs
manta-crypto/src/curve/: bls12_381.rs  bn254.rs  mod.rs
manta-crypto/src/dalek/: ed25519.rs  mod.rs
manta-crypto/src/eclair/: alloc.rs  assert.rs  bool.rs  cmp.rs  execution.rs  measure.rs  mod.rs  num.rs  ops.rs  uint.rs
manta-crypto/src/encryption/: authenticated.rs  convert.rs  hybrid.rs  ies.rs  mod.rs  symmetric.rs
manta-crypto/src/key/: agreement.rs  kdf.rs  mod.rs
manta-crypto/src/merkle_tree/: forest.rs  fork.rs  full.rs  inner_tree.rs  leaf_map.rs  mod.rs  node.rs  partial.rs  path.rs  sharded.rs  single_leaf.rs  single_path.rs  test.rs  tree.rs
manta-crypto/src/merkle_tree2/: mod.rs  path.rs
manta-crypto/src/permutation/: duplex.rs  mod.rs  sponge.rs
manta-crypto/src/poseidon/: constants.rs  encryption.rs  hash.rs  matrix.rs  mds.rs  mod.rs  round_constants.rs
manta-crypto/src/set/: constraint.rs  mod.rs
manta-crypto/src/signature/: convert.rs  mod.rs
manta-parameters/: .gitattributes  Cargo.toml  README.md  build.rs  data.checkfile  generate_checkfile.sh
manta-parameters/data/pay/: README.md
manta-parameters/data/ppot/: round72powers19.lfs  round72powers5.lfs
manta-parameters/src/: lib.rs
manta-pay/: Cargo.toml  README.md  build.rs
manta-pay/benches/: main.rs
manta-pay/src/: config.rs  ies.rs  key.rs  ledger.rs  lib.rs  parameters.rs  payment.rs  sample_payment.rs  signer.rs  test.rs  wallet.rs
manta-pay/src/accounting/: config.rs  identity.rs  key.rs  keys.rs  ledger.rs  mod.rs  transfer.rs  wallet.rs
manta-pay/src/config/: mod.rs  poseidon.rs  utxo.rs  utxo_utilities.rs
manta-pay/src/crypto/: ecc.rs  encryption.rs  ies.rs  key.rs  merkle_tree.rs  mod.rs  parameters.rs  rand.rs
manta-pay/src/signer/: base.rs  functions.rs  methods.rs  mod.rs  stateless_signer.rs
manta-pay/src/simulation/: mod.rs
manta-pay/src/test/: balance.rs  compat.rs  compatibility.rs  config.rs  ledger.rs  merkle_tree.rs  mod.rs  payment.rs  signer.rs  transfer.rs
manta-pay/src/trusted_setup/: config.rs  mod.rs  util.rs
manta-pay/src/util/: http.rs  io.rs  mod.rs  scale.rs  utxo_utilities.rs
manta-pay/src/wallet/: cache.rs  mod.rs  signer.rs
manta-trusted-setup/: .gitignore  Cargo.toml  README.md  contribution_hashes.txt  dummy_register.csv
manta-trusted-setup/data/: _registry_0  _registry_1  _registry_2  _registry_3  _registry_4  _registry_5  circuit_names  dummy_0_challenge_1  dummy_0_challenge_2  dummy_0_challenge_3  dummy_0_challenge_4  dummy_0_challenge_5  dummy_0_proof_1  dummy_0_proof_2  dummy_0_proof_3  dummy_0_proof_4  dummy_0_proof_5  dummy_0_state_1  dummy_0_state_2  dummy_0_state_3  dummy_0_state_4  dummy_0_state_5  dummy_1_challenge_1  dummy_1_challenge_2  dummy_1_challenge_3  dummy_1_challenge_4  dummy_1_challenge_5  dummy_1_proof_1  dummy_1_proof_2  dummy_1_proof_3  dummy_1_proof_4  dummy_1_proof_5  dummy_1_state_0  dummy_1_state_1  dummy_1_state_2  dummy_1_state_3  dummy_1_state_4  dummy_1_state_5  dummy_2_challenge_0  dummy_2_challenge_1  (+18 more)
manta-trusted-setup/src/: distribution.rs  groth16.rs  kzg.rs  lib.rs  mpc.rs  pairing.rs  ratio.rs  serialize.rs  util.rs  utils.rs
manta-trusted-setup/src/ceremony/: bls_server.rs  client.rs  coordinator.rs  message.rs  mod.rs  participant.rs  queue.rs  registry.rs  requests.rs  server.rs  signature.rs  state.rs  util.rs
manta-trusted-setup/src/groth16/: bn254.rs  config.rs  kzg.rs  mod.rs  mpc.rs  phase1.rs  phase2.rs  power_of_tau.rs  sapling.rs  test.rs
manta-trusted-setup/src/tests/: stress_test.py
manta-util/: Cargo.toml  README.md
manta-util/src/: array.rs  bytes.rs  cache.rs  cmp.rs  codec.rs  collections.rs  concat.rs  convert.rs  future.rs  lib.rs  macros.rs  message.rs  mixed_chain.rs  num.rs  ops.rs  persistance.rs  pointer.rs  rand.rs  sealed.rs  serde.rs  vec.rs
manta/src/: lib.rs
src/: lib.rs
(+231 files in other folders)
