[package]
name = "manta"
edition = "2021"
version = "0.4.0"
authors = ["Manta Network <contact@manta.network>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Manta-Network/manta-rs"
homepage = "https://github.com/Manta-Network"
documentation = "https://github.com/Manta-Network/manta-rs"
categories = [""]
keywords = [""]
description = "Rust Crates for the Manta Network Ecosystem"
publish = false

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[badges]
is-it-maintained-issue-resolution = { repository = "Manta-Network/manta-rs" }
is-it-maintained-open-issues = { repository = "Manta-Network/manta-rs" }
maintenance = { status = "actively-developed" }

[workspace]
resolver = "2"
members = [
    "manta-accounting",
    "manta-crypto",
    "manta-pay",
    "manta-util",
]

[features]
# Default Features
default = []

# Standard Library
std = []

# Test Frameworks
test = ["manta-accounting/test", "manta-crypto/test"]

[dependencies]
manta-accounting = { path = "manta-accounting" }
manta-crypto = { path = "manta-crypto" }
manta-pay = { path = "manta-pay" }
manta-util = { path = "manta-util" }
parity-scale-codec = { version = "2.2.0", default-features = false }

