[package]
name = "manta-accounting"
version = "0.4.0"
edition = "2021"
authors = ["Manta Network <contact@manta.network>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Manta-Network/manta-rs"
homepage = "https://github.com/Manta-Network"
documentation = "https://github.com/Manta-Network/manta-rs"
categories = [""]
keywords = [""]
description = "Accounting Primitives for Manta."
publish = false

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[badges]
is-it-maintained-issue-resolution = { repository = "Manta-Network/manta-rs" }
is-it-maintained-open-issues = { repository = "Manta-Network/manta-rs" }
maintenance = { status = "actively-developed" }

[features]
# Cocoon Filesystem Adapters
cocoon-fs = ["async-std", "cocoon/std", "zeroize"]

# Standard Library
std = ["async-std", "cocoon/std", "manta-util/std"]

# Testing Frameworks
test = ["async-std", "futures", "indexmap", "rand/alloc", "statrs"]

[dependencies]
async-std = { version = "1.10.0", optional = true }
cocoon = { version = "0.3.0", optional = true, default-features = false }
derivative = { version = "2.2.0", default-features = false, features = ["use_core"] }
derive_more = { version = "0.99.16", default-features = false, features = ["add", "add_assign", "display", "from", "mul", "mul_assign", "sum"] }
futures = { version = "0.3.19", optional = true, default-features = false, features = ["alloc"] }
indexmap = { version = "1.8.0", optional = true, default-features = false }
manta-crypto = { path = "../manta-crypto", default-features = false }
manta-util = { path = "../manta-util", features = ["alloc"] }
statrs = { version = "0.15.0", optional = true, default-features = false }
rand = { version = "0.8.4", optional = true, default-features = false }
zeroize = { version = "1.4.3", optional = true, default-features = false, features = ["alloc"] }

[dev-dependencies]
rand = "0.8.4"
