[package]
name = "manta-accounting"
version = "0.5.4"
edition = "2021"
authors = ["Manta Network <contact@manta.network>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Manta-Network/manta-rs"
homepage = "https://github.com/Manta-Network"
documentation = "https://github.com/Manta-Network/manta-rs"
categories = [""]
keywords = [""]
description = "Accounting Primitives for Manta."
publish = false

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[badges]
is-it-maintained-issue-resolution = { repository = "Manta-Network/manta-rs" }
is-it-maintained-open-issues = { repository = "Manta-Network/manta-rs" }
maintenance = { status = "actively-developed" }

[features]
# Encrypted Filesystem 
fs = ["bitflags"]

# Cocoon Filesystem Adapter
cocoon-fs = [
    "cocoon/std",
    "fs",
    "manta-crypto/getrandom",
    "rand_chacha",
    "std",
]

# Serde
serde = ["manta-crypto/serde"]

# Standard Library
std = ["manta-crypto/std", "manta-util/std"]

# Testing Frameworks
test = [
    "futures",
    "indexmap",
    "manta-crypto/rand",
    "parking_lot",
    "statrs"
]

[dependencies]
bitflags = { version = "1.3.2", optional = true, default-features = false }
cocoon = { version = "0.3.1", optional = true, default-features = false }
derivative = { version = "2.2.0", default-features = false, features = ["use_core"] }
derive_more = { version = "0.99.16", default-features = false, features = ["add", "add_assign", "display", "from", "sum"] }
futures = { version = "0.3.21", optional = true, default-features = false, features = ["alloc"] }
indexmap = { version = "1.8.0", optional = true, default-features = false }
manta-crypto = { path = "../manta-crypto", default-features = false }
manta-util = { path = "../manta-util", default-features = false, features = ["alloc"] }
parking_lot = { version = "0.12.0", optional = true, default-features = false }
rand_chacha = { version = "0.3.1", optional = true, default-features = false }
statrs = { version = "0.15.0", optional = true, default-features = false }

[dev-dependencies]
manta-crypto = { path = "../manta-crypto", default-features = false, features = ["getrandom"] }
