[package]
name = "manta-accounting"
version = "0.5.8"
edition = "2021"
authors = ["Manta Network <contact@manta.network>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Manta-Network/manta-rs"
homepage = "https://github.com/Manta-Network"
documentation = "https://github.com/Manta-Network/manta-rs"
categories = [""]
keywords = [""]
description = "Accounting Primitives for Manta."
publish = false

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[badges]
is-it-maintained-issue-resolution = { repository = "Manta-Network/manta-rs" }
is-it-maintained-open-issues = { repository = "Manta-Network/manta-rs" }
maintenance = { status = "actively-developed" }

[features]
# Encrypted Filesystem 
fs = ["bitflags"]

# Cocoon Filesystem Adapter
cocoon-fs = [
    "cocoon/std",
    "fs",
    # "manta-crypto/getrandom",
    "std",
]

# Serde
serde = ["openzl-crypto/serde"]

# Standard Library
std = ["openzl-crypto/std", "openzl-util/std"]

# Testing Frameworks
test = [
    "futures",
    "indexmap",
    # "manta-crypto/arkworks",
    "openzl-crypto/test",
    "openzl-util/rand",
    "parking_lot",
    "statrs"
]

[dependencies]
bitflags = { version = "1.3.2", optional = true, default-features = false }
cocoon = { version = "0.3.1", optional = true, default-features = false }
derivative = { version = "2.2.0", default-features = false, features = ["use_core"] }
derive_more = { version = "0.99.16", default-features = false, features = ["add", "add_assign", "display", "from", "sum"] }
# eclair = { git = "https://github.com/openzklib/openzl", default-features = false }
eclair = { path = "../../../openzl/openzl/eclair", default-features = false }
futures = { version = "0.3.21", optional = true, default-features = false, features = ["alloc"] }
indexmap = { version = "1.8.0", optional = true, default-features = false }
openzl-crypto = { path = "../../../openzl/openzl/openzl-crypto", default-features = false }
# openzl-crypto = { git = "https://github.com/openzklib/openzl", default-features = false }
openzl-util = { path = "../../../openzl/openzl/openzl-util", default-features = false, features = ["alloc"] }
# openzl-util = { git = "https://github.com/openzklib/openzl", default-features = false, features = ["alloc"] }
parking_lot = { version = "0.12.0", optional = true, default-features = false }
statrs = { version = "0.15.0", optional = true, default-features = false }

[dev-dependencies]
# manta-crypto = { path = "../manta-crypto", default-features = false, features = ["getrandom"] }
