[package]
name = "manta-benchmark"
version = "0.5.4"
edition = "2021"
authors = ["Manta Network <contact@manta.network>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Manta-Network/manta-rs"
homepage = "https://github.com/Manta-Network"
documentation = "https://github.com/Manta-Network/manta-rs"
categories = [""]
keywords = [""]
description = "Benchmark for Manta."
publish = false

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[badges]
is-it-maintained-issue-resolution = { repository = "Manta-Network/manta-rs" }
is-it-maintained-open-issues = { repository = "Manta-Network/manta-rs" }
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib", "lib"]

[[bench]]
name = "ecc"
harness = false

[[bench]]
name = "mint"
harness = false

[[bench]]
name = "private_transfer"
harness = false

[[bench]]
name = "reclaim"
harness = false

[dependencies]
getrandom = { version = "0.2.6", default-features = false, features = ["js"] }
instant = { version = "0.1.12", default-features = false, features = [ "wasm-bindgen" ] }
manta-accounting = { path = "../manta-accounting", default-features = false, features = ["test"] }
manta-crypto = { path = "../manta-crypto", default-features = false, features = ["ark-bls12-381", "getrandom", "test"] }
manta-pay = { path = "../manta-pay", default-features = false, features = ["groth16", "test"] }
wasm-bindgen = { version = "0.2.83", default-features = false }
wasm-bindgen-test = { version = "0.3.33", default-features = false }
web-sys = { version = "0.3.59", default-features = false, features = ["console"] }

[dev-dependencies]
criterion = { version = "0.3.4", default-features = false }
