[package]
name = "manta-codec"
edition = "2018"
version = "0.3.0"
authors = ["Manta Network <contact@manta.network>"]
readme = "README.md"
license-file = "LICENSE" 
repository = "https://github.com/Manta-Network/manta-rs"
homepage = "https://github.com/Manta-Network"
documentation = "https://github.com/Manta-Network/manta-rs"
categories = [""]
keywords = [""]
description = "Serialization and Deserialization tools for Manta."
publish = false

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[badges]
is-it-maintained-issue-resolution = { repository = "Manta-Network/manta-rs" }
is-it-maintained-open-issues = { repository = "Manta-Network/manta-rs" }
maintenance = { status = "actively-developed" }

[features]
# Scale Codec Derive Traits
derive = ["scale-codec/derive"]

# Standard Library
std = []

[dependencies]
ark-serialize = { version = "0.3.0", default-features = false }
ark-std = { version = "0.3.0", default-features = false }
displaydoc = { version = "0.2.3", default-features = false }
manta-util = { path = "../manta-util", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false }
