[package]
name = "manta-crypto"
version = "0.5.4"
edition = "2021"
authors = ["Manta Network <contact@manta.network>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Manta-Network/manta-rs"
homepage = "https://github.com/Manta-Network"
documentation = "https://github.com/Manta-Network/manta-rs"
categories = [""]
keywords = [""]
description = "Cryptographic Primitives and Interfaces for Manta."
publish = false

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[badges]
is-it-maintained-issue-resolution = { repository = "Manta-Network/manta-rs" }
is-it-maintained-open-issues = { repository = "Manta-Network/manta-rs" }
maintenance = { status = "actively-developed" }

[features]
# Arkworks Backend
arkworks = [
    "ark-ec",
    "ark-ff",
    "ark-r1cs-std",
    "ark-relations",
    "ark-serialize",
]

# Enable `getrandom` Entropy Source
getrandom = ["rand_core/getrandom"]

# Serde
serde = ["manta-util/serde-alloc", "manta-util/serde-array"]

# Standard Library
std = ["manta-util/std"]

# Testing Frameworks
test = []

[dependencies]
ark-ec = { version = "0.3.0", optional = true, default-features = false }
ark-ff = { version = "0.3.0", optional = true, default-features = false }
ark-r1cs-std = { version = "0.3.1", optional = true, default-features = false }
ark-relations = { version = "0.3.0", optional = true, default-features = false }
ark-serialize = { version = "0.3.0", optional = true, default-features = false }
derivative = { version = "2.2.0", default-features = false, features = ["use_core"] }
manta-util = { path = "../manta-util", default-features = false, features = ["alloc"] }
num-bigint = {version = "0.4.3", optional = true, default-features = false}
rand = { version = "0.8.4", optional = true, default-features = false, features = ["alloc"] }
rand_core = { version = "0.6.3", default-features = false }
workspace-hack = { version = "0.1.0", path = "../workspace-hack" }

[dev-dependencies]
ark-bls12-381 = { version = "0.3.0", default-features = false, features = ["scalar_field"] }
ark-bn254 = { version = "0.3.0", default-features = false, features = ["scalar_field"] }
manta-crypto = { path = ".", default-features = false, features = ["getrandom"] }
