[package]
name = "manta-crypto"
version = "0.5.13"
edition = "2021"
authors = ["Manta Network <contact@manta.network>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Manta-Network/manta-rs"
homepage = "https://github.com/Manta-Network"
documentation = "https://github.com/Manta-Network/manta-rs"
categories = [""]
keywords = [""]
description = "Cryptographic Primitives and Interfaces for Manta."
publish = false

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[badges]
is-it-maintained-issue-resolution = { repository = "Manta-Network/manta-rs" }
is-it-maintained-open-issues = { repository = "Manta-Network/manta-rs" }
maintenance = { status = "actively-developed" }

[features]
# Arkworks Backend
arkworks = [
    "ark-ec",
    "ark-ff",
    "ark-r1cs-std",
    "ark-relations",
    "ark-serialize",
    "ark-snark",
    "ark-std",
    "num-integer",
]

# Dalek Cryptography Backend
dalek = ["ed25519-dalek"]

# Enable `getrandom` Entropy Source
getrandom = ["rand_core/getrandom"]

# Serde Serialization
serde = [
    "ed25519-dalek?/serde",
    "manta-util/serde-alloc",
    "manta-util/serde-array",
    "rand_chacha?/serde1"
]

# Standard Library
std = [
    "ark-bls12-381?/std",
    "ark-bn254?/std",
    "ark-ec?/std",
    "ark-ed-on-bls12-381?/std",
    "ark-ed-on-bn254?/std",
    "ark-ff?/std",
    "ark-groth16?/std",
    "ark-r1cs-std?/std",
    "ark-relations?/std",
    "ark-serialize?/std",
    "ark-std?/std",
    "manta-util/std",
    "rand?/std",
    "rand_chacha?/std"
]

# Testing Frameworks
test = []

[dependencies]
ark-bls12-381 = { version = "0.3.0", optional = true, default-features = false, features = ["curve"] }
ark-bn254 = { version = "0.3.0", optional = true, default-features = false, features = ["curve"] }
ark-ec = { version = "0.3.0", optional = true, default-features = false }
ark-ed-on-bls12-381 = { version = "0.3.0", optional = true, default-features = false, features = ["r1cs"] }
ark-ed-on-bn254 = { version = "0.3.0", optional = true, default-features = false, features = ["r1cs"] }
ark-ff = { version = "0.3.0", optional = true, default-features = false }
ark-groth16 = { version = "0.3.0", optional = true, default-features = false }
ark-r1cs-std = { version = "0.3.1", optional = true, default-features = false }
ark-relations = { version = "0.3.0", optional = true, default-features = false }
ark-serialize = { version = "0.3.0", optional = true, default-features = false, features = ["derive"] }
ark-snark = { version = "0.3.0", optional = true, default-features = false }
ark-std = { version = "0.3.0", optional = true, default-features = false }
derivative = { version = "2.2.0", default-features = false, features = ["use_core"] }
ed25519-dalek = { version = "1.0.1", optional = true, default-features = false, features = ["u64_backend"] }
manta-util = { path = "../manta-util", default-features = false, features = ["alloc"] }
num-integer = { version = "0.1.45", optional = true, default-features = false } 
rand = { version = "0.8.5", optional = true, default-features = false, features = ["alloc"] }
rand_chacha = { version = "0.3.1", optional = true, default-features = false }
rand_core = { version = "0.6.4", default-features = false }

[dev-dependencies]
manta-crypto = { path = ".", default-features = false, features = ["ark-bn254", "ark-ed-on-bn254", "getrandom", "rand", "std", "test"] }
