[package]
name = "manta-parameters"
version = "0.5.4"
edition = "2021"
authors = ["Manta Network <contact@manta.network>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Manta-Network/manta-rs"
homepage = "https://github.com/Manta-Network"
documentation = "https://github.com/Manta-Network/manta-rs"
categories = [""]
keywords = [""]
description = "Concrete Parameters for Manta Protocols."
publish = false

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[badges]
is-it-maintained-issue-resolution = { repository = "Manta-Network/manta-rs" }
is-it-maintained-open-issues = { repository = "Manta-Network/manta-rs" }
maintenance = { status = "actively-developed" }

[features]
# Download Data from GitHub
download = ["anyhow", "attohttpc", "std"]

# Enable Standard Library
std = ["anyhow?/std"]

[dependencies]
anyhow = { version = "1.0.65", optional = true, default-features = false }
attohttpc = { version = "0.22.0", optional = true }
blake3 = { version = "1.3.1", default-features = false }

[dev-dependencies]
git2 = { version = "0.15.0", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
manta-parameters = { path = ".", default-features = false, features = ["download"] }
tempfile = { version = "3.3.0", default-features = false }
walkdir = { version = "2.3.2", default-features = false }

[build-dependencies]
anyhow = { version = "1.0.65", default-features = false, features = ["std"] }
blake3 = { version = "1.3.1", default-features = false, features = ["std"] }
gitignore = { version = "1.0.7", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
walkdir = { version = "2.3.2", default-features = false }
