[package]
name = "manta-pay"
version = "0.5.4"
edition = "2021"
authors = ["Manta Network <contact@manta.network>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Manta-Network/manta-rs"
homepage = "https://github.com/Manta-Network"
documentation = "https://github.com/Manta-Network/manta-rs"
categories = [""]
keywords = [""]
description = "The Manta-Pay protocol and implementaion."
publish = false

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[badges]
is-it-maintained-issue-resolution = { repository = "Manta-Network/manta-rs" }
is-it-maintained-open-issues = { repository = "Manta-Network/manta-rs" }
maintenance = { status = "actively-developed" }

[[bin]]
name = "generate_parameters"
required-features = ["groth16", "manta-util/std", "test"]

[[bin]]
name = "measure"
required-features = ["groth16", "manta-crypto/getrandom", "test"]

[[bin]]
name = "simulation"
required-features = ["clap", "groth16", "simulation"]

[features]
# Enable Arkworks Backend
arkworks = [
    "ark-std",
    "manta-crypto/ark-bls12-381",
    "manta-crypto/ark-ed-on-bls12-381",
    "manta-crypto/arkworks",
]

# Enable Download Parameters
download = ["manta-parameters/download", "std"]

# Enable Groth16 ZKP System
groth16 = ["ark-groth16", "ark-snark", "arkworks"]

# Enable HTTP Signer Client
http = ["manta-util/reqwest", "serde"]

# SCALE Codec and Type Info
scale = ["scale-codec", "scale-info"]

# SCALE Codec and Type Info with the Standard Library Enabled
scale-std = ["scale", "scale-codec/std", "scale-info/std", "std"]

# Serde
serde = ["manta-accounting/serde", "manta-crypto/serde"]

# Simulation Framework
simulation = [
    "indexmap",
    "parking_lot",
    "manta-util/rayon",
    "test",
    "manta-util/tide",
    "tokio/io-std",
    "tokio/io-util",
    "tokio/macros",
    "tokio/rt-multi-thread",
    "tokio/sync",
    "wallet",
]

# Standard Library
std = ["manta-accounting/std", "manta-util/std"]

# Testing Frameworks
test = ["manta-accounting/test", "manta-crypto/test", "manta-parameters", "tempfile"]

# Wallet
wallet = ["bip32", "manta-crypto/getrandom", "std"]

# Enable WebSocket Signer Client
websocket = [
    "futures",
    "serde",
    "serde_json",
    "std",
    "tokio",
    "tokio-tungstenite/connect",
    "ws_stream_wasm",
]

[dependencies]
aes-gcm = { version = "0.9.4", default-features = false, features = ["aes", "alloc"] }
ark-groth16 = { version = "0.3.0", optional = true, default-features = false }
ark-snark = { version = "0.3.0", optional = true, default-features = false }
ark-std = { version = "0.3.0", optional = true, default-features = false }
bip32 = { version = "0.3.0", optional = true, default-features = false, features = ["bip39", "secp256k1"] }
blake2 = { version = "0.10.4", default-features = false }
bs58 = { version = "0.4.0", optional = true, default-features = false, features = ["alloc"] }
clap = { version = "3.2.22", optional = true, default-features = false, features = ["color", "derive", "std", "suggestions", "unicode", "wrap_help"] }
derivative = { version = "2.2.0", default-features = false, features = ["use_core"] }
futures = { version = "0.3.24", optional = true, default-features = false }
indexmap = { version = "1.9.1", optional = true, default-features = false }
manta-accounting = { path = "../manta-accounting", default-features = false }
manta-crypto = { path = "../manta-crypto", default-features = false, features = ["rand_chacha"] }
manta-parameters = { path = "../manta-parameters", optional = true, default-features = false }
manta-util = { path = "../manta-util", default-features = false }
parking_lot = { version = "0.12.1", optional = true, default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.1.2", optional = true, default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.1.2", optional = true, default-features = false, features = ["derive"] }
serde_json = { version = "1.0.85", optional = true, default-features = false, features = ["alloc"] }
tempfile = { version = "3.3.0", optional = true, default-features = false }
tokio = { version = "1.21.1", optional = true, default-features = false }
tokio-tungstenite = { version = "0.17.2", optional = true, default-features = false, features = ["native-tls"] }
ws_stream_wasm = { version = "0.7.3", optional = true, default-features = false }

[dev-dependencies]
manta-crypto = { path = "../manta-crypto", default-features = false, features = ["getrandom"] }
manta-pay = { path = ".", default-features = false, features = ["download", "groth16", "scale", "scale-std", "std", "test"] }
