[package]
name = "manta-pay"
version = "0.5.8"
edition = "2021"
authors = ["Manta Network <contact@manta.network>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Manta-Network/manta-rs"
homepage = "https://github.com/Manta-Network"
documentation = "https://github.com/Manta-Network/manta-rs"
categories = [""]
keywords = [""]
description = "The Manta-Pay protocol and implementaion."
publish = false

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[badges]
is-it-maintained-issue-resolution = { repository = "Manta-Network/manta-rs" }
is-it-maintained-open-issues = { repository = "Manta-Network/manta-rs" }
maintenance = { status = "actively-developed" }

[[bin]]
name = "generate_parameters"
required-features = ["groth16", "openzl-util/std", "parameters", "serde"]

[[bin]]
name = "simulation"
required-features = ["clap", "groth16", "simulation"]

[features]
# Enable Arkworks Backend
arkworks = [
    "openzl-plugin-arkworks/bls12-381",
    "openzl-plugin-arkworks/bn254",
    "openzl-plugin-arkworks/ed-on-bls12-381",
    "openzl-plugin-arkworks/ed-on-bn254",
    "num-bigint",
]

# Enable Download Parameters
download = ["manta-parameters/download", "std"]

# Enable Groth16 ZKP System
groth16 = [
    "arkworks",
    "openzl-plugin-arkworks/groth16",
]

# Enable HTTP Signer Client
http = ["openzl-util/reqwest", "serde", "network"]

# Key Features
key = ["bip32", "bip0039"]

# Enable Multiple Network Support
network = []

# Parameter Loading
parameters = ["groth16", "openzl-crypto/test", "manta-parameters"]

# SCALE Codec and Type Info
scale = ["scale-codec", "scale-info"]

# SCALE Codec and Type Info with the Standard Library Enabled
scale-std = ["scale", "scale-codec/std", "scale-info/std", "std"]

# Serde
serde = ["manta-accounting/serde", "openzl-crypto/serde"]

# Simulation Framework
simulation = [
    "indexmap",
    "parking_lot",
    "openzl-util/rayon",
    "test",
    "openzl-util/tide",
    "tokio/io-std",
    "tokio/io-util",
    "tokio/macros",
    "tokio/rt-multi-thread",
    "tokio/sync",
    "wallet",
]

# Standard Library
std = [
    "manta-accounting/std",
    "openzl-crypto/std",
    "openzl-util/std",
]

# Testing Frameworks
test = [
    "manta-accounting/test",
    "manta-parameters/download",
    "openzl-crypto/test",
    "tempfile",
]

# Wallet
wallet = ["key", "openzl-util/getrandom", "std"]

# Enable WebSocket Signer Client
websocket = [
    "futures",
    "serde",
    "serde_json",
    "std",
    "tokio",
    "tokio-tungstenite/connect",
    "ws_stream_wasm",
]

[dependencies]
aes-gcm = { version = "0.9.4", default-features = false, features = ["aes", "alloc"] }
bip0039 = { version = "0.10.1", optional = true, default-features = false }
bip32 = { version = "0.3.0", optional = true, default-features = false, features = ["bip39", "secp256k1"] }
blake2 = { version = "0.10.5", default-features = false }
bs58 = { version = "0.4.0", optional = true, default-features = false, features = ["alloc"] }
clap = { version = "3.2.23", optional = true, default-features = false, features = ["color", "derive", "std", "suggestions", "unicode", "wrap_help"] }
derivative = { version = "2.2.0", default-features = false, features = ["use_core"] }
eclair = { git = "https://github.com/openzklib/openzl", branch = "feat/plonky2-plugin", default-features = false }
futures = { version = "0.3.25", optional = true, default-features = false }
indexmap = { version = "1.9.2", optional = true, default-features = false }
manta-accounting = { path = "../manta-accounting", default-features = false }
manta-parameters = { path = "../manta-parameters", optional = true, default-features = false }
num-bigint = { version = "0.4.3", optional = true, default-features = false }
openzl-crypto = { git = "https://github.com/openzklib/openzl", branch = "feat/plonky2-plugin", default-features = false }
openzl-plugin-arkworks = { git = "https://github.com/openzklib/openzl", branch = "feat/plonky2-plugin", default-features = false }
openzl-util = { git = "https://github.com/openzklib/openzl", branch = "feat/plonky2-plugin", default-features = false, features = ["rand_chacha"] }
parking_lot = { version = "0.12.1", optional = true, default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.1.2", optional = true, default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.1.2", optional = true, default-features = false, features = ["derive"] }
serde_json = { version = "1.0.85", optional = true, default-features = false, features = ["alloc"] }
tempfile = { version = "3.3.0", optional = true, default-features = false }
tokio = { version = "1.23.0", optional = true, default-features = false }
tokio-tungstenite = { version = "0.18.0", optional = true, default-features = false, features = ["native-tls"] }
ws_stream_wasm = { version = "0.7.3", optional = true, default-features = false }

[dev-dependencies]
manta-pay = { path = ".", default-features = false, features = ["download", "parameters", "groth16", "scale", "scale-std", "std", "test", "wallet"] }
openzl-util = { git = "https://github.com/openzklib/openzl", branch = "feat/plonky2-plugin", default-features = false, features = ["getrandom"] }
